--- a/src/main/resources/public/template/workflow/workFlowList.html
+++ b/src/main/resources/public/template/workflow/workFlowList.html
@@ -10,11 +10,11 @@
         <tr class="flex-row align-items-center">
             <th width="25%" class="align-left" th:text="#{workflowAdmin.label.name}"></th>
             <th width="10%" class="align-left" th:text="#{workflowAdmin.label.type}"></th>
-            <th width="10%" class="align-left" th:text="#{workflowAdmin.label.group}"></th>
+            <th width="15%" class="align-left" th:text="#{workflowAdmin.label.group}"></th>
             <th width="20%" class="align-left" th:text="#{workflowAdmin.label.description}"></th>
-            <th width="15%" class="align-left" th:text="#{workflowAdmin.label.status}"></th>
-            <th width="10%" class="align-left" th:text="#{common.label.edit}"></th>
-            <th width="10%" class="align-left" th:text="#{common.label.delete}"></th>
+            <th width="10%" class="align-center" th:text="#{workflowAdmin.label.status}"></th>
+            <th width="10%" class="align-center" th:text="#{common.label.edit}"></th>
+            <th width="10%" class="align-center" th:text="#{common.label.delete}"></th>
         </tr>
     </thead>
     <tbody class="list-body">
@@ -29,7 +29,7 @@
             </td>
             <td style="width: 10%;" class="align-left" th:if="${document.documentType} == 'application-form'" th:text="#{document.type.applicationForm}"></td>
             <td style="width: 10%;" class="align-left" th:unless="${document.documentType} == 'application-form'" th:text="#{document.type.workflow}"></td>
-            <td style="width: 10%;" class="align-left">
+            <td style="width: 15%;" class="align-left">
                 <th:block th:if="${document.documentGroup != null && document.documentGroup != ''}">
                     <th:block th:each="group, index : ${groupList}">
                         <label th:if="${group.code} == ${document.documentGroup}" th:text="${group.codeValue}"></label>
@@ -37,7 +37,7 @@
                 </th:block>
             </td>
             <td style="width: 20%;" class="align-left" th:text="${document.documentDesc}"></td>
-            <td style="width: 15%;" class="align-left" th:text="#{${document.documentStatus}}"></td>
+            <td style="width: 10%;" class="align-left" th:text="#{${document.documentStatus}}"></td>
             <td style="width: 10%;">
                 <button type="button" sec:authorize="hasAuthority('document.admin.update')" th:onclick="openDocumentEdit([[${document.documentId}]])">
                     <span class="icon-edit"></span>
