--- a/src/main/resources/public/template/layout/defaultLayout.html
+++ b/src/main/resources/public/template/layout/defaultLayout.html
@@ -16,6 +16,7 @@
 				<div class="main flex-column">
 				    <th:block layout:fragment="content"></th:block>
 				</div>
+				<th:block layout:fragment="aside"></th:block>
 				<footer th:replace="layout/fragments/commonFooter :: commonFooter"></footer>
 			</div>
 		</div>
