--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1162,7 +1162,7 @@ input.mb:disabled {
 }
 
 label {
-  margin: 0.5625rem 0 0.5625rem 0;
+  margin: 0.625rem 0;
   color: #3F4B56;
 }
 
@@ -1179,6 +1179,24 @@ textarea {
 
 table[id="documentDisplay"] td {
   overflow: initial;
+}
+
+.checkbox-all {
+  display: table-cell;
+  padding-top: 0.3125rem;
+}
+
+.checkbox-list {
+  height: 13.5rem;
+  border: 0.0625rem solid #EBEBEB;
+  border-radius: 0.0625rem;
+  padding: 0.5rem 0.625rem;
+}
+
+.checkbox-list li {
+  height: 1.5rem;
+  font-weight: 400;
+  color: #586872;
 }
 
 /* _buttons.scss 
@@ -2229,6 +2247,10 @@ button .icon-plus {
   padding: 0.3125rem 0px 1.875rem 0px;
 }
 
+.itsm-container .main .header-search .txt-num {
+  color: #7E848C;
+}
+
 .itsm-container .main .page-title {
   display: flex;
   align-items: baseline;
@@ -2275,7 +2297,15 @@ button .icon-plus {
 }
 
 .itsm-container .main .list-body tr:hover {
-  background: #EBEBEB;
+  background-color: #EBEBEB;
+}
+
+.itsm-container .main .list-body tr.active {
+  background-color: rgba(230, 232, 235, 0.6);
+}
+
+.itsm-container .main .list-body tr.active td {
+  color: #0060A5;
 }
 
 .itsm-container .main .list-body tr td {
@@ -2299,6 +2329,41 @@ button .icon-plus {
   pointer-events: none;
 }
 
+.itsm-container .main .list-tree {
+  height: 37.88rem;
+}
+
+.itsm-container .aside {
+  flex-shrink: 0;
+  width: 38.125rem;
+  background-color: #ffffff;
+  padding: 9.625rem 2.1875rem 3.125rem 0;
+}
+
+.itsm-container .aside.code {
+  width: 62.5rem;
+}
+
+.itsm-container .aside .auth-edit,
+.itsm-container .aside .role-edit,
+.itsm-container .aside .code-edit {
+  height: 41.25rem;
+  margin: 0 0 1.875rem 0;
+}
+
+.itsm-container .aside .auth-edit .edit-form,
+.itsm-container .aside .role-edit .edit-form,
+.itsm-container .aside .code-edit .edit-form {
+  padding: 0 1.875rem 0 4.0625rem;
+  overflow: auto;
+}
+
+.itsm-container .aside .auth-edit .edit-form .edit-row,
+.itsm-container .aside .role-edit .edit-form .edit-row,
+.itsm-container .aside .code-edit .edit-form .edit-row {
+  margin-top: 0.625rem;
+}
+
 .notice-header,
 .faq-header,
 .download-header,
@@ -2308,7 +2373,10 @@ button .icon-plus {
 .process-header,
 .form-header,
 .document-admin-header,
-.custom-code-header {
+.custom-code-header,
+.auth-header,
+.role-header,
+.code-header {
   padding: 2.188rem 3.75rem 0 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2322,7 +2390,10 @@ button .icon-plus {
 .process-content,
 .form-content,
 .document-admin-content,
-.custom-code-content {
+.custom-code-content,
+.auth-content,
+.role-content,
+.code-content {
   padding: 0.9375rem 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2336,13 +2407,6 @@ button .icon-plus {
  *
  * 파일 경로 : contents/_contents-token.scss
  * @description 개인 현황판(dashboardView), 신청서(tokenSearch)
- * @author jy.lim
- * @version 1.0
- */
-  /* _contents-list.scss
- *
- * 파일 경로 : contents/_contents-list.scss
- * @description 리스트 화면 (ex. 사용자 목록)
  * @author jy.lim
  * @version 1.0
  */
@@ -2365,13 +2429,6 @@ button .icon-plus {
  *
  * 파일 경로 : contents/_contents-list-document.scss
  * @description 문서함 리스트 화면
- * @author jy.lim
- * @version 1.0
- */
-  /* _contents-tree-edit.scss
- *
- * 파일 경로 : contents/_contents-tree-edit.scss
- * @description 코드관리와 같이 트리와 편집화면이 1개의 화면으로 구성되는 경우
  * @author jy.lim
  * @version 1.0
  */
@@ -2630,95 +2687,6 @@ button .icon-plus {
     opacity: 1;
     -webkit-transform: translateY(0);
   }
-}
-
-.itsm-container .contents-list {
-  height: 100vh;
-  background: #F7F8F9;
-  padding: 2.875rem 3.75rem 2.875rem 3.75rem;
-}
-
-.itsm-container .contents-list .list {
-  padding-top: 1.25rem;
-}
-
-.itsm-container .contents-list .list a, .itsm-container .contents-list .list button {
-  cursor: pointer;
-}
-
-.itsm-container .contents-list .list .list-table {
-  width: 100%;
-}
-
-.itsm-container .contents-list .list .list-table .list-head {
-  display: block;
-}
-
-.itsm-container .contents-list .list .list-table .list-head > tr {
-  display: flex;
-  height: 2.375rem;
-  border-bottom: 0.125rem solid #E1E3E6;
-}
-
-.itsm-container .contents-list .list .list-table .list-head > tr th {
-  color: #3F4B56;
-  font-size: 1.125rem;
-  font-weight: 500;
-  text-align: left;
-}
-
-.itsm-container .contents-list .list .list-table .list-head > tr th:first-child {
-  padding-left: 1.25rem;
-}
-
-.itsm-container .contents-list .list .list-table .list-body {
-  display: block;
-  height: 35.3125rem;
-  overflow-y: auto;
-  width: 100%;
-}
-
-.itsm-container .contents-list .list .list-table .list-body tr {
-  display: table;
-  width: 100%;
-  height: 2.875rem;
-}
-
-.itsm-container .contents-list .list .list-table .list-body tr:hover {
-  background: #EBEBEB;
-}
-
-.itsm-container .contents-list .list .list-table .list-body tr.active td {
-  color: #0060A5;
-  background: #EBEBEB;
-}
-
-.itsm-container .contents-list .list .list-table .list-body tr td {
-  color: #586872;
-  font-size: 1rem;
-  font-weight: 400;
-  max-width: 0;
-  vertical-align: middle;
-  padding-right: 0.625rem;
-}
-
-.itsm-container .contents-list .list .list-table .list-body tr td:first-child {
-  padding-left: 1.25rem;
-}
-
-.itsm-container .contents-list .list .list-table .list-body tr td a {
-  color: #586872;
-}
-
-.itsm-container .contents-list .list .list-table .list-body tr td button {
-  height: 1.875rem;
-  padding: 0 0.3125rem;
-  margin: 0;
-}
-
-.itsm-container .contents-list .list .list-table .list-body tr td .profile-photo {
-  width: 1.688rem;
-  height: 1.688rem;
 }
 
 .itsm-container .contents-edit {
@@ -3211,139 +3179,6 @@ button .icon-plus {
 .itsm-container .contents-document .document-area .card-area .no-data-found {
   min-width: 98.75rem;
   margin: 0;
-}
-
-.itsm-container .contents-tree-edit {
-  height: 100vh;
-  background: #F7F8F9;
-}
-
-.itsm-container .contents-tree-edit > .tree-area {
-  height: 100vh;
-  flex: 1;
-  padding: 2.875rem 3.75rem 6.875rem 3.75rem;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list {
-  padding-top: 1.25rem;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list a, .itsm-container .contents-tree-edit > .tree-area .list button {
-  cursor: pointer;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table {
-  width: 100%;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-head {
-  display: block;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-head > tr {
-  display: flex;
-  height: 2.375rem;
-  border-bottom: 0.125rem solid #E1E3E6;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-head > tr th {
-  color: #3F4B56;
-  font-size: 1.125rem;
-  font-weight: 500;
-  text-align: left;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-head > tr th:first-child {
-  padding-left: 1.25rem;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-body {
-  display: block;
-  height: 35.3125rem;
-  overflow-y: auto;
-  width: 100%;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-body tr {
-  display: table;
-  width: 100%;
-  height: 2.875rem;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-body tr:hover {
-  background: #EBEBEB;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-body tr.active td {
-  color: #0060A5;
-  background: #EBEBEB;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-body tr td {
-  color: #586872;
-  font-size: 1rem;
-  font-weight: 400;
-  max-width: 0;
-  vertical-align: middle;
-  padding-right: 0.625rem;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-body tr td:first-child {
-  padding-left: 1.25rem;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-body tr td a {
-  color: #586872;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-body tr td button {
-  height: 1.875rem;
-  padding: 0 0.3125rem;
-  margin: 0;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list .list-table .list-body tr td .profile-photo {
-  width: 1.688rem;
-  height: 1.688rem;
-}
-
-.itsm-container .contents-tree-edit > .tree-area .list {
-  width: 35.125rem;
-  height: 37.5rem;
-}
-
-.itsm-container .contents-tree-edit > .edit-area {
-  width: 65.625rem;
-  padding: 9.625rem 2.1875rem 3.125rem 0;
-  background: #ffffff;
-  font-weight: 500;
-}
-
-.itsm-container .contents-tree-edit > .edit-area .scroll-wrap {
-  height: 43.125rem;
-  margin: 0 0 0.625rem 0;
-}
-
-.itsm-container .contents-tree-edit > .edit-area .scroll-wrap .form-wrap {
-  flex: 1;
-  overflow: auto;
-  padding: 0 1.875rem 0 4.0625rem;
-}
-
-.itsm-container .contents-tree-edit > .edit-area .form-row {
-  flex-flow: wrap;
-}
-
-.itsm-container .contents-tree-edit > .edit-area .form-row .form-div {
-  width: 49%;
-}
-
-.itsm-container .contents-tree-edit > .edit-area .form-set {
-  margin-top: 0.6875rem;
-}
-
-.itsm-container .contents-tree-edit > .edit-area .form-set .title {
-  font-weight: 500;
 }
 
 .itsm-container-close {
