--- a/src/main/resources/public/template/auth/authList.html
+++ b/src/main/resources/public/template/auth/authList.html
@@ -6,20 +6,20 @@
 <body>
     <table class="list-table">
         <thead class="list-head">
-            <tr>
-                <th width="25%" th:text="#{auth.label.authName}"></th>
-                <th width="25%" th:text="#{auth.label.authId}"></th>
-                <th width="50%" th:text="#{auth.label.authDesc}"></th>
+            <tr class="flex-row align-items-center">
+                <th style="width:25%;" class="align-left" th:text="#{auth.label.authName}"></th>
+                <th style="width:25%;" class="align-left" th:text="#{auth.label.authId}"></th>
+                <th style="width:50%;" class="align-left" th:text="#{auth.label.authDesc}"></th>
             </tr>
         </thead>
         <tbody class="list-body">
-            <tr class="no-data-found-list" th:if="${#arrays.isEmpty(authList)}">
-                <td colspan="3" th:text="#{common.msg.noData}"></td>
+            <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(authList)}">
+                <td colspan="3" class="align-center" th:text="#{common.msg.noData}"></td>
             </tr>
-            <tr th:each="auth : ${authList}">
-                <td width="25%" id="authName" name="authName" th:text="${auth.authName}" th:id="${auth.authId}"></td>
-                <td width="25%" id="authId" name="authId" th:text="${auth.authId}"></td>
-                <td width="50%" id="authDesc" name="authDesc" th:text="${auth.authDesc}" class="align-left"></td>
+            <tr class="flex-row align-items-center" th:each="auth : ${authList}">
+                <td style="width:25%;" class="align-left" th:id="${auth.authId}" name="authName" th:text="${auth.authName}"></td>
+                <td style="width:25%;" class="align-left" id="authId" name="authId" th:text="${auth.authId}"></td>
+                <td style="width:50%;" class="align-left" id="authDesc" name="authDesc" th:text="${auth.authDesc}"></td>
             </tr>
         </tbody>
     </table>
