--- a/src/main/resources/public/template/role/roleList.html
+++ b/src/main/resources/public/template/role/roleList.html
@@ -6,20 +6,20 @@
 <body>
     <table class="list-table">
         <thead class="list-head">
-            <tr>
-                <th width="25%" th:text="#{role.label.name}"></th>
-                <th width="25%" th:text="#{role.label.id}"></th>
-                <th width="50%" th:text="#{role.label.desc}"></th>
+            <tr class="flex-row align-items-center">
+                <th style="width:25%;" class="align-left" th:text="#{role.label.name}"></th>
+                <th style="width:25%;" class="align-left" th:text="#{role.label.id}"></th>
+                <th style="width:50%;" class="align-left" th:text="#{role.label.desc}"></th>
             </tr>
         </thead>
         <tbody class="list-body">
-        <tr class="no-data-found-list" th:if="${#arrays.isEmpty(roleList)}">
-            <td colspan="3" th:text="#{common.msg.noData}"></td>
+        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(roleList)}">
+            <td colspan="3" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
-            <tr th:each="role : ${roleList}">
-                <td width="25%" id="roleName" name="roleName" th:text="${role.roleName}" th:id="${role.roleId}" style="cursor: pointer;"></td>
-                <td width="25%" id="roleId" name="roleId" th:text="${role.roleId}"></td>
-                <td width="50%" id="roleDesc" name="roleDesc" th:text="${role.roleDesc}" class="align-left"></td>
+            <tr class="flex-row align-items-center" th:each="role : ${roleList}">
+                <td style="width:25%;" class="align-left" th:id="${role.roleId}" name="roleName" th:text="${role.roleName}"></td>
+                <td style="width:25%;" class="align-left" id="roleId" name="roleId" th:text="${role.roleId}"></td>
+                <td style="width:50%;" class="align-left" id="roleDesc" name="roleDesc" th:text="${role.roleDesc}"></td>
             </tr>
         </tbody>
     </table>
