--- a/src/main/resources/public/template/workflow/workFlowList.html
+++ b/src/main/resources/public/template/workflow/workFlowList.html
@@ -37,13 +37,13 @@
                 </th:block>
             </td>
             <td style="width: 20%;" class="align-left" th:text="${document.documentDesc}"></td>
-            <td style="width: 10%;" class="align-left" th:text="#{${document.documentStatus}}"></td>
-            <td style="width: 10%;">
+            <td style="width: 10%;" class="align-center" th:text="#{${document.documentStatus}}"></td>
+            <td style="width: 10%;" class="align-center">
                 <button type="button" sec:authorize="hasAuthority('document.admin.update')" th:onclick="openDocumentEdit([[${document.documentId}]])">
                     <span class="icon-edit"></span>
                 </button>
             </td>
-            <td style="width: 10%;" class="align-left">
+            <td style="width: 10%;" class="align-center">
                 <button type="button" sec:authorize="hasAuthority('document.admin.delete')" th:onclick="deleteDocument([[${document.documentId}]])">
                     <span class="icon-delete"></span>
                 </button>
