--- a/src/main/resources/public/template/board/boardView.html
+++ b/src/main/resources/public/template/board/boardView.html
@@ -79,9 +79,11 @@
                        th:value="${boardAdmin?.attachFileSize}" maxlength="4" disabled/>
             </div>
             <div class="btn-list">
-                <button class="point-fill" sec:authorize="hasAuthority('board.admin.update')" th:if="${boardAdmin?.boardAdminId}" type="button" th:onclick ="'location.href =\'' + @{/board-admin/{id}/edit(id=${boardAdmin.boardAdminId})}+'\''" th:text="#{common.btn.modify}"></button>
-                <button class="default-line" sec:authorize="hasAuthority('board.admin.delete')" th:if="${boardAdmin?.boardAdminId}" type="button" id="delete" th:disabled="${!boardAdmin.enabled}" th:onclick="restSubmit('DELETE',[[@{/rest/board-admin/{boardAdminId}(boardAdminId=${boardAdmin.boardAdminId})}]])" th:text="#{common.btn.delete}"></button>
-                <a class="btn default-line" href="/board-admin/search" th:text="#{common.btn.list}"></a>
+                <button class="point-fill" sec:authorize="hasAuthority('board.admin.update')"
+                        th:if="${boardAdmin?.boardAdminId}" type="button" th:onclick ="'location.href =\'' + @{/boards/{id}/edit(id=${boardAdmin.boardAdminId})}+'\''" th:text="#{common.btn.modify}"></button>
+                <button class="default-line" sec:authorize="hasAuthority('board.admin.delete')"
+                        th:if="${boardAdmin?.boardAdminId}" type="button" id="delete" th:disabled="${!boardAdmin.enabled}" th:onclick="restSubmit('DELETE',[[@{/rest/boards/{boardAdminId}(boardAdminId=${boardAdmin.boardAdminId})}]])" th:text="#{common.btn.delete}"></button>
+                <a class="btn default-line" href="/boards/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
     </div>
@@ -110,7 +112,7 @@
                 async: async,
                 callbackFunc: function() {
                     aliceJs.alertSuccess(i18n.msg('common.msg.delete'), function() {
-                        window.location.href = '/board-admin/search';
+                        window.location.href = '/boards/search';
                     });
                 },
                 showProgressbar: false
